--- a/docs/organizations/accounts/toc.yml
+++ b/docs/organizations/accounts/toc.yml
@@ -12,22 +12,6 @@
     href: resources-granted-to-project-members.md
 - name: How-to guides
   items:
-  - name: Manage your organization
-    items:
-    - name: Change organization Owner
-      href: change-organization-ownership-vs.md
-    - name: Rename organization
-      href: rename-vsts-organization.md
-    - name: Delete organization
-      href: delete-your-organization.md
-    - name: Recover organization
-      href: recover-your-vsts-organization.md
-    - name: Change organization location
-      href: change-organization-location.md
-    - name: Add privacy policy URL
-      href: add-privacy-policy-url.md
-    - name: Change time zone
-      href: change-time-zone.md
   - name: Manage access
     items:
     - name: Add users to your organization
@@ -49,28 +33,44 @@
       href: delete-organization-users.md
     - name: Add external users
       href: add-external-user.md
-    - name: Access with Azure AD
-      items:
-      - name: Connect organization to Azure AD
-        href: connect-organization-to-azure-ad.md
-      - name: Manage groups
-        href: manage-azure-active-directory-groups.md
-      - name: Add users to Azure AD
-        href: add-users-to-azure-ad.md
-      - name: Change Azure AD connection
-        href: change-azure-ad-connection.md
-      - name: Disconnect from Azure AD
-        href: disconnect-organization-from-azure-ad.md
-      - name: Delete users connected to Azure AD
-        href: delete-users-from-services-aad.md
-      - name: Restrict organization creation
-        href: azure-ad-tenant-policy-restrict-org-creation.md
-      - name: FAQ 
-        href: faq-azure-access.md#faq-connect    
-    - name: Manage group rules & group-based access 
-      href: assign-access-levels-and-extensions-by-group-membership.md
+  - name: Manage access with Azure AD
+    items:
+    - name: Connect organization to Azure AD
+      href: connect-organization-to-azure-ad.md
+    - name: Manage groups
+      href: manage-azure-active-directory-groups.md
+    - name: Add users to Azure AD
+      href: add-users-to-azure-ad.md
+    - name: Change Azure AD connection
+      href: change-azure-ad-connection.md
+    - name: Disconnect from Azure AD
+      href: disconnect-organization-from-azure-ad.md
+    - name: Delete users connected to Azure AD
+      href: delete-users-from-services-aad.md
+    - name: Restrict organization creation
+      href: azure-ad-tenant-policy-restrict-org-creation.md
+    - name: FAQ 
+      href: faq-azure-access.md#faq-connect    
+  - name: Manage access with group rules 
+    href: assign-access-levels-and-extensions-by-group-membership.md
   - name: Add and manage banners
-    href: ../settings/manage-banners.md  
+    href: ../settings/manage-banners.md 
+  - name: Manage your organization
+    items:
+    - name: Change organization Owner
+      href: change-organization-ownership-vs.md
+    - name: Rename organization
+      href: rename-vsts-organization.md
+    - name: Delete organization
+      href: delete-your-organization.md
+    - name: Recover organization
+      href: recover-your-vsts-organization.md
+    - name: Change organization location
+      href: change-organization-location.md
+    - name: Add privacy policy URL
+      href: add-privacy-policy-url.md
+    - name: Change time zone
+      href: change-time-zone.md 
 - name: Troubleshooting
   items:
   - name: Create organization
