--- a/release-notes/TOC.yml
+++ b/release-notes/TOC.yml
@@ -6,6 +6,8 @@
   - name: 2019
     expanded: true
     items:
+    - name: December 16
+      href: 2019/sprint-162-update.md 
     - name: December 2
       href: 2019/sprint-161-update.md 
     - name: November 4
@@ -334,6 +336,8 @@
       href: 2019/boards/sprint-146-update.md
 - name: Azure Repos
   items:
+    - name: December 16
+      href: 2019/repos/sprint-162-update.md 
     - name: December 2
       href: 2019/repos/sprint-161-update.md 
     - name: November 4
@@ -362,6 +366,8 @@
       href: 2019/repos/sprint-147-update.md
 - name: Azure Pipelines
   items:
+    - name: December 16
+      href: 2019/pipelines/sprint-162-update.md
     - name: December 2
       href: 2019/pipelines/sprint-161-update.md
     - name: November 4
@@ -462,6 +468,8 @@
       href: 2019/general/sprint-146-update.md
 - name: Reporting
   items:
+    - name: December 16
+      href: 2019/reporting/sprint-162-update.md
     - name: November 4
       href: 2019/reporting/sprint-160-update.md
     - name: September 23 
