--- a/docs/notifications/toc.yml
+++ b/docs/notifications/toc.yml
@@ -13,31 +13,31 @@
   - name: "Follow work & pull requests"
     href: ../boards/work-items/follow-work-items.md?toc=/azure/devops/organizations/toc.json&bc=/azure/devops/organizations/breadcrumb/toc.json
   - name: Manage personal notifications
-    href: howto-manage-personal-notifications.md
+    href: manage-personal-notifications.md
   - name: Set alerts, get notified when changes occur
     href: ../boards/queries/alerts-and-notifications.md?toc=/azure/devops/organizations/toc.json&bc=/azure/devops/organizations/breadcrumb/toc.json
   - name: Manage team and group notifications
-    href: howto-manage-team-notifications.md
+    href: manage-team-group-notifications.md
 - name: How-to guides
   items:
   - name: Manage organization notifications
-    href: howto-manage-organization-notifications.md
+    href: manage-organization-notifications.md
   - name: Manage organization default delivery settings
-    href: howto-manage-organization-notifications-settings.md
+    href: manage-organization-notifications-settings.md
   - name: View notification statistics for your organization
-    href: howto-view-organization-notification-statistics.md
+    href: view-organization-notification-statistics.md
   - name: Change your preferred email address
     href: change-email-address.md
   - name: Use subscription logging for troubleshooting
-    href: howto-use-subscription-logging.md
+    href: use-subscription-logging.md
   - name: Exclude yourself from notification of events you initiated
-    href: howto-exclude-self-from-email.md
+    href: exclude-self-from-email.md
   - name: "Use @mentions to further discussion"
     href: at-mentions.md
   - name: "Use #ID to link to work items"
     href: add-links-to-work-items.md
   - name: Send notifications to third-party services (Slack, Teams, etc)
-    href: howto-integrate-third-party-services.md
+    href: integrate-third-party-services.md
 - name: Troubleshooting
   items:
   - name: Why am I not getting an email
