--- a/docs/pipelines/toc.yml
+++ b/docs/pipelines/toc.yml
@@ -590,13 +590,13 @@
         - name: NuGet Installer 0.*
           href: tasks/package/prev-versions/nuget-installer-0.md
         - name: NuGet Restore 1.*
-          href: tasks/package/nuget.md#restore-nuget-packages
+          href: tasks/package/nuget.md
         - name: NuGet Packager 0.*
           href: tasks/package/prev-versions/nuget-packager-0.md
         - name: NuGet Publisher 0.*
           href: tasks/package/prev-versions/nuget-publisher-0.md
         - name: NuGet Command 0.*
-          href: tasks/package/nuget.md#custom-nuget-command
+          href: tasks/package/nuget.md
         - name: Pip Authenticate 0.*
           href: tasks/package/prev-versions/pip-authenticate-0.md
         - name: Twine Authenticate 0.*
